apicorrection